[tool.poetry]
name = "clickhouse-driver"
version = "0.2.7"
description = "ClickHouse Python Driver with the native (TCP) interface support."
license = "MIT"
authors = [
    "Konstantin Lebedev <kostyan.lebedev@gmail.com>"
]
readme = "README.md"
homepage = "https://pypi.org/project/clickhouse-driver/"
repository = "https://github.com/mymarilyn/clickhouse-driver"
documentation = "https://clickhouse-driver.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["ClickHouse", "DB", "Database", "Cloud", "Analytics"]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.8"
pytz = "^2024.1"
tzlocal = "^5.2"


[tool.poetry.group.lint.dependencies]
bandit = "^1.7.8"
black = "^24.3.0"
mypy = "^1.9.0"
ruff = "^0.3.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
